--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           nohup python3 ./app.py &
       - name: Wait for server (sleep 5 secs)
         run: |
-          sleep 180
+          sleep 1000000
       - name: Run DVGA Tests
         run: |
           python3 -m pytest tests/*
