--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
       - uses: actions/checkout@v3
  
       - name: Setup pipeline enforcer
-        uses: aquasecurity/pipeline-enforcer-action@main
+      - uses: aquasecurity/pipeline-enforcer-action@main
         with:
           aqua-key: ${{ secrets.AQUA_KEY }}
           aqua-secret: ${{ secrets.AQUA_SECRET }}
-        run: |
+      - run: |
           sleep 10000000000
  
       - uses: actions/setup-python@v4
