--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,10 @@ jobs:
       - uses: actions/checkout@v3
  
       - name: Setup pipeline enforcer
-      - uses: aquasecurity/pipeline-enforcer-action@main
+        uses: aquasecurity/pipeline-enforcer-action@main
         with:
           aqua-key: ${{ secrets.AQUA_KEY }}
           aqua-secret: ${{ secrets.AQUA_SECRET }}
-      - run: |
-          sleep 10000000000
  
       - uses: actions/setup-python@v4
         with:
@@ -53,7 +51,7 @@ jobs:
           nohup python3 ./app.py &
       - name: Wait for server (sleep 5 secs)
         run: |
-          sleep 1000000
+          sleep 180
       - name: Run DVGA Tests
         run: |
           python3 -m pytest tests/*
