--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/checkout@v3
       # Added for SBOM generation
       - name: Build Docker Image
-        run: docker build -t "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER" .
+        run: docker build -t knightfortheright/mytest:v3 .
       - name: Manifest Generation
         run: |
           export BILLY_SERVER=https://billy.codesec.aquasec.com
