--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           BINDIR="." sh install.sh
           rm install.sh install.sh.checksum
           ./billy generate \
-            --access-token "${{ secrets.GITHUB_TOKEN }}" \
-            --aqua-key "${{ secrets.AQUA_KEY }}" \
-            --aqua-secret "${{ secrets.AQUA_SECRET }}" \
-            --artifact-path "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER"
+            --access-token ${{ secrets.GITHUB_TOKEN }} \
+            --aqua-key ${{ secrets.AQUA_KEY }} \
+            --aqua-secret ${{ secrets.AQUA_SECRET }} \
+            --artifact-path $GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER
