--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,6 @@ jobs:
           AQUA_KEY: ${{ secrets.AQUA_KEY }}
           AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
           GITHUB_TOKEN: ${{ github.token }}
-          AQUA_URL: https://api.eu-1.supply-chain.cloud.aquasec.com
-          CSPM_URL: https://eu-1.api.cloudsploit.com
           TRIVY_RUN_AS_PLUGIN: 'aqua'
           # For http/https proxy configuration add env vars: HTTP_PROXY/HTTPS_PROXY, CA-CRET (path to CA certificate)
  
@@ -32,6 +30,14 @@ jobs:
     runs-on: ubuntu-20.04
     needs: scan
     steps:
+      - uses: actions/checkout@v3
+ 
+      - name: Setup pipeline enforcer
+        uses: aquasecurity/pipeline-enforcer-action@main
+        with:
+          aqua-key: ${{ secrets.AQUA_KEY }}
+          aqua-secret: ${{ secrets.AQUA_SECRET }}
+ 
       - uses: actions/setup-python@v4
         with:
           python-version: '3.6'
@@ -43,7 +49,7 @@ jobs:
           nohup python3 ./app.py &
       - name: Wait for server (sleep 5 secs)
         run: |
-          sleep 180
+          sleep 5
       - name: Run DVGA Tests
         run: |
           python3 -m pytest tests/*
@@ -55,7 +61,7 @@ jobs:
       - uses: actions/checkout@v3
       # Added for SBOM generation
       - name: Build Docker Image
-        run: docker build -t knightfortheright/mytest:v3 .
+        run: docker build -t "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER" .
       - name: Manifest Generation
         run: |
           export BILLY_SERVER=https://billy.codesec.aquasec.com
@@ -68,7 +74,7 @@ jobs:
           BINDIR="." sh install.sh
           rm install.sh install.sh.checksum
           ./billy generate \
-            --access-token ${{ secrets.GITHUB_TOKEN }} \
-            --aqua-key ${{ secrets.AQUA_KEY }} \
-            --aqua-secret ${{ secrets.AQUA_SECRET }} \
-            --artifact-path $GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER
+            --access-token "${{ secrets.GITHUB_TOKEN }}" \
+            --aqua-key "${{ secrets.AQUA_KEY }}" \
+            --aqua-secret "${{ secrets.AQUA_SECRET }}" \
+            --artifact-path "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER"
