--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
           # To enable reachability scanning, add: --reachability
           # To enable npm/dotnet non-lock file scanning, add: --package-json / --dotnet-proj
         env:
-          AQUA_KEY: titEqUJpNFcEK98ZOPFYoB
-          AQUA_SECRET: qBvS4oItdOtRFFOVNpWFFIlX8qRBkOwi3aR
-          AQUA_URL: https://api.eu-1.supply-chain.cloud.aquasec.com
+          AQUA_KEY: ${{ secrets.AQUA_KEY }}
+          AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
           GITHUB_TOKEN: ${{ github.token }}
+          AQUA_URL: https://api.eu-1.supply-chain.cloud.aquasec.com
           CSPM_URL: https://eu-1.api.cloudsploit.com
           TRIVY_RUN_AS_PLUGIN: 'aqua'
           # For http/https proxy configuration add env vars: HTTP_PROXY/HTTPS_PROXY, CA-CRET (path to CA certificate)
@@ -33,14 +33,9 @@ jobs:
     needs: scan
     steps:
       - uses: actions/checkout@v3
-      - name: Setup pipeline enforcer
-        uses: aquasecurity/pipeline-enforcer-action@main
-        with:
-          aqua-key: ${{ secrets.AQUA_KEY }}
-          aqua-secret: ${{ secrets.AQUA_SECRET }}
-          CSPM_URL: https://eu-1.api.cloudsploit.com
-          AQUA_URL: https://api.eu-1.supply-chain.cloud.aquasec.com
+ 
 
+ 
       - uses: actions/setup-python@v4
         with:
           python-version: '3.6'
@@ -52,7 +47,7 @@ jobs:
           nohup python3 ./app.py &
       - name: Wait for server (sleep 5 secs)
         run: |
-          sleep 5
+          sleep 180
       - name: Run DVGA Tests
         run: |
           python3 -m pytest tests/*
@@ -64,7 +59,7 @@ jobs:
       - uses: actions/checkout@v3
       # Added for SBOM generation
       - name: Build Docker Image
-        run: docker build -t "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER" .
+        run: docker build -t knightfortheright/mytest:v3 .
       - name: Manifest Generation
         run: |
           export BILLY_SERVER=https://billy.codesec.aquasec.com
@@ -80,4 +75,6 @@ jobs:
             --access-token "${{ secrets.GITHUB_TOKEN }}" \
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
+            --AQUA_URL https://api.eu-1.supply-chain.cloud.aquasec.com
+            --CSPM_URL https://eu-1.api.cloudsploit.com
             --artifact-path "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER"
