--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,4 +75,5 @@ jobs:
             --access-token "${{ secrets.GITHUB_TOKEN }}" \
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
+            --cspm-url https://eu-1.api.cloudsploit.com \
             --artifact-path "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER"
