--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,4 @@ jobs:
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
             --cspm-url https://eu-1.api.cloudsploit.com \
-            --artifact-path "$GITHUB_REPOSITORY:$GITHUB_RUN_NUMBER"
+            --artifact-path knightfortheright/mytest:v3
